--- a/Dockerfile.optimized
+++ b/Dockerfile.optimized
@@ -26,10 +26,11 @@ RUN mkdir -p data/audio data/sessions logs && \
 
 # Health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=40s --retries=3 \
-  CMD curl -f http://localhost:${PORT:-8000}/health/ || exit 1
+  CMD curl -f http://localhost:$PORT/health/ || exit 1
 
 # Exposition du port dynamique (pour Railway, Render, etc.)
-EXPOSE ${PORT:-8000}
+EXPOSE $PORT
+#EXPOSE ${PORT:-8000}
 
 # Commande de démarrage avec port dynamique
-CMD uvicorn app.main:app --host 0.0.0.0 --port ${PORT:-8000} --workers 1
+#gunicorn app.main:app --bind 0.0.0.0:$PORT --workers 4
