--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ python-multipart==0.0.6
 # Audio Processing
 librosa==0.10.1
 soundfile==0.12.1
-openai-whisper==20231117
+openai-whisper>=20240930
 
 # NLU & Text Processing
 groq==0.4.1
